#3-refactor: 글 수정시 해시태그 컬렉션이 List.of()가 불면이라 제거 기능을 지원하지 않아 ArrayList로 바꾸어 수정 기능을 구현했다.